--- a/helloWorld.ipynb
+++ b/helloWorld.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyMO1ZtfevR4ZkfPnBjSpyLw",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -15,14 +17,24 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/soseariba/AI-Boostcamp-NIELTI/blob/main/helloWorld.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "khXmXF1ZXcEO",
-        "outputId": "fbae1846-3ea7-4c9d-9b5f-ce9e313a9115"
+        "outputId": "f4b638f0-ba73-475a-b025-e6d388ca6ff7"
       },
       "outputs": [
         {
